#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-94
2020-09-12 Mikhail S. Dubrovin
- fix option for panel indices in epix10ka_deploy_constants, add new app/det_raw_calib_image
#	new file:   app/det_raw_calib_image
#	modified:   src/UtilsEpix10kaCalib.py

Tag: V01-00-93
2020-09-11 Mikhail S. Dubrovin
- add option -I in app/epix10ka_deploy_constants
- fix issue to access EPIX100A and EPIX10KA shape from configuration
	modified:   app/epix10ka_deploy_constants
	modified:   app/epix10ka_test_calibcycles
	modified:   src/PyDetectorAccess.py
	modified:   src/UtilsEpix10kaCalib.py

Tag: V01-00-92
2020-09-02 Mikhail S. Dubrovin
- add default constants for epix10ka and epix10kaquad
	new file:   data/geometry-def-epix10ka.data
	new file:   data/geometry-def-epix10kaquad.data
	modified:   src/PyDetectorAccess.py

Tag: V01-00-91
2020-08-25 Mikhail S. Dubrovin
- add parameter cframe to coords_xyz, add a few default geometry files, update examples
	new file:   data/geometry-def-epix10ka2m.data
	new file:   data/geometry-def-jungfrau05m.data
	new file:   data/geometry-def-jungfrau1m.data
	new file:   data/geometry-def-jungfrau4m.data
	modified:   examples/ex_epix10ka_images.py
	new file:   examples/test-2020-08-25-epix10ka-panel-flatness-optmet.py
	new file:   examples/test-2020-08-25-epix10ka2m-marc.py
	new file:   examples/test-lab-pixel-coordinates-on-psana-frame-image.py
	modified:   src/AreaDetector.py
	modified:   src/PyDetectorAccess.py

Tag: V01-00-90
2020-08-25 Mikhail S. Dubrovin
- keep polishing epix10ka2m scripts
  - deploy_constants
    - to prevent warnings do not open non-existent files for rms and status in AML-L and AHL-L
    - check that per-panel file extension is .dat