@@ -1,0 +1,64 @@
+#!/usr/bin/env python
+
+"""Splits epix10ka2m calibration constants (7,16,352,384)
+   into 7 per gain mode imaging arrays of shape (16,352,384).
+   Created on 2020-08-21 by Mikhail Dubrovin
+"""
+import os
+import sys
+import numpy as np
+
+SCRNAME = os.path.basename(sys.argv[0])
+
+import logging
+#DICT_NAME_TO_LEVEL = {k:v for k,v in logging._levelNames.iteritems() if isinstance(k, str)}
+logging.basicConfig(format='[%(levelname).1s] L%(lineno)04d: %(message)s', level=logging.DEBUG)
+
+logger = logging.getLogger(__name__)
+logger.info('start %s' % SCRNAME)
+
+def_cfname = 'calib/Epix10ka2M::CalibV1/MfxEndstation.0:Epix10ka2M.0/pixel_gain/172-end.data'
+def_ofprefix = 'nda-16x352x384'
+
+ex0_cfname = 'calib/Epix10ka2M::CalibV1/MfxEndstation.0:Epix10ka2M.0/pixel_gain/172-end.data'
+ex0_ofprefix = 'nda-16x352x384/nda-16x352x384-mfxc00118-r0172-epix10ka2m.1-pixel_gain'
+
+ex1_cfname = 'calib/Epix10ka2M::CalibV1/MfxEndstation.0:Epix10ka2M.0/pedestals/172-end.data'
+ex1_ofprefix = 'nda-16x352x384/nda-16x352x384-mfxc00118-r0172-epix10ka2m.1-pedestals'
+
+ex2_cfname = 'calib/Epix10ka2M::CalibV1/XcsEndstation.0:Epix10ka2M.0/pedestals/95-end.data'
+ex2_ofprefix = './xcsc00118-0095-epix10ka2m.0-pedestals'
+
+usage = '  %s <nda-7x16x352x384> [out-file-prefix]'%SCRNAME\
+      + '\nexample: %s %s %s' % (SCRNAME, def_cfname, def_ofprefix)\
+      + '\n         %s %s %s' % (SCRNAME, ex0_cfname, ex0_ofprefix)\
+      + '\n         %s %s %s' % (SCRNAME, ex1_cfname, ex1_ofprefix)\
+      + '\n         %s %s %s' % (SCRNAME, ex2_cfname, ex2_ofprefix)
+logging.info('%s\nusage: %s' % (50*'=', usage))
+
+nargs = len(sys.argv)
+if nargs<2: sys.exit('Input file name parameters is missing. See usage.')
+
+cfname   = sys.argv[1] if nargs>1 else def_cfname
+ofprefix = sys.argv[2] if nargs>2 else def_ofprefix
+
+from PSCalib.NDArrIO import save_txt, load_txt
+from Detector.GlobalUtils import print_ndarr, info_ndarr
+from Detector.UtilsEpix10ka import GAIN_MODES
+
+#shape = (7,16,352,384)
+#nda_calib = np.loadtxt(cfname)
+#nda_calib.shape = shape
+
+nda_calib = load_txt(cfname)
+logger.info(info_ndarr(nda_calib,'nda_calib'))
+
+for igm, gmname in enumerate(GAIN_MODES):
+    nda = nda_calib[igm]
+    ofname = '%s-%s.txt' % (ofprefix, gmname)
+    logger.info(info_ndarr(nda, ofname))
+
+    #cmd = 'plims 
+    #os.system(cmd)
+
+    save_txt(ofname, arr=nda, cmts=(), fmt='%.6f', verbos=True, addmetad=True)
